--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -9,7 +9,7 @@ headlineNumbers:
 
       - label: Total
         value: cumVirusTestsByPublishDate
-        tooltip: Cumulative total number of virus tests reported up to {date}
+        tooltip: Total number of virus tests reported up to {date}
 
   - caption: PCR testing capacity
     valueItems:
@@ -77,18 +77,18 @@ cards:
               window: 7
               clipEnd: 3
 
-      - heading: Cumulative
+      - heading: Total
         tabType: chart
         barType: normal
         fields:
           - label: Virus tests reported
             value: cumVirusTestsByPublishDate
-            tooltip: Cumulative number of virus tests reported up to {date}
+            tooltip: Total number of virus tests reported up to {date}
             type: bar
             colour: 0
             rollingAverage: false
 
-      - heading: Data
+      - heading: Data table
         tabType: table
         fields:
           - label: Date
@@ -101,10 +101,10 @@ cards:
             type: numeric
             tooltip: Daily number of virus tests reported on {date}
 
-          - label: Cumulative virus tests reported
+          - label: Total virus tests reported
             value: cumVirusTestsByPublishDate
             type: numeric
-            tooltip: Cumulative number of virus tests reported up to {date}
+            tooltip: Total number of virus tests reported up to {date}
 
       - heading: About 
         tabType: metadata
@@ -260,18 +260,18 @@ cards:
               fill: true
               rollingAverage: false
 
-        - heading: Cumulative
+        - heading: Total
           tabType: chart
           barType: normal
           fields:
             - label: PCR tests conducted
               value: cumPCRTestsByPublishDate
-              tooltip: Cumulative number of PCR tests conducted up to {date}
+              tooltip: Total number of PCR tests conducted up to {date}
               type: bar
               colour: 0
               rollingAverage: false
 
-        - heading: Data
+        - heading: Data table
           tabType: table
           fields:
             - label: Date
@@ -284,10 +284,10 @@ cards:
               type: numeric
               tooltip: Daily number of PCR tests conducted on {date}
 
-            - label: Cumulative PCR tests conducted
+            - label: Total PCR tests conducted
               value: cumPCRTestsByPublishDate
               type: numeric
-              tooltip: Cumulative number of PCR tests conducted up to {date}
+              tooltip: Total number of PCR tests conducted up to {date}
 
             - label: PCR testing capacity
               value: plannedPCRCapacityByPublishDate
@@ -330,18 +330,18 @@ cards:
               fill: true
               rollingAverage: false
 
-        - heading: Cumulative
+        - heading: Total
           tabType: chart
           barType: normal
           fields:
             - label: Antibody tests processed
               value: cumAntibodyTestsByPublishDate
-              tooltip: Cumulative number of antibody serology tests processed by laboratories up to {date}
+              tooltip: Total number of antibody serology tests processed by laboratories up to {date}
               type: bar
               colour: 0
               rollingAverage: false
 
-        - heading: Data
+        - heading: Data table
           tabType: table
           fields:
             - label: Date
@@ -354,10 +354,10 @@ cards:
               type: numeric
               tooltip: Daily number of antibody serology tests processed by laboratories on {date}
 
-            - label: Cumulative antibody tests processed
+            - label: Total antibody tests processed
               value: cumAntibodyTestsByPublishDate
               type: numeric
-              tooltip: Cumulative number of antibody serology tests processed by laboratories up to {date}
+              tooltip: Total number of antibody serology tests processed by laboratories up to {date}
 
             - label: Antibody testing capacity
               value: plannedAntibodyCapacityByPublishDate
@@ -393,7 +393,7 @@ cards:
       - capacityPillarFour 
 
     tabs:
-      - heading: Data
+      - heading: Data table
         tabType: table
 
         fields:
@@ -474,7 +474,7 @@ cards:
             overlaying: "y"  # Which axis to overlay
             side: right  # Which side to show the overlayed axis
 
-      - heading: Data
+      - heading: Data table
         tabType: table
         fields:
           - label: 7-day period ending
@@ -563,13 +563,13 @@ cards:
                 window: 7
                 clipEnd: 11 #no of days to exclude for incomplete data
           
-        - heading: Cumulative
+        - heading: Total
           tabType: chart
           barType: normal
           fields:
             - label: Virus tests reported
               value: cumVirusTestsBySpecimenDate
-              tooltip: Cumulative number of virus tests reported
+              tooltip: Total number of virus tests reported
               type: bar
               colour: 0
               rollingAverage: false
@@ -579,7 +579,7 @@ cards:
                 colour: 6
                 label: "Most recent days (incomplete)"
 
-        - heading: Data
+        - heading: Data table
           tabType: table
           fields:
             - label: Date
@@ -629,13 +629,13 @@ cards:
               
 
             
-        - heading: Cumulative
+        - heading: Total
           tabType: chart
           barType: stack
           fields:
             - label: Lab-based virus tests conducted
               value: cumPCRTestsBySpecimenDate
-              tooltip: Cumulative number of lab-based virus tests conducted
+              tooltip: Total number of lab-based virus tests conducted
               type: bar
               colour: 0
               rollingAverage: false
@@ -647,14 +647,14 @@ cards:
 
             - label: Rapid lateral flow tests reported
               value: cumLFDTestsBySpecimenDate
-              tooltip: Cumulative number of rapid lateral flow tests reported
+              tooltip: Total number of rapid lateral flow tests reported
               type: bar
               colour: 3
               rollingAverage: false
               
 
             
-        - heading: Daily data
+        - heading: Daily data table
           tabType: table
           fields:
             - label: Date
@@ -672,7 +672,7 @@ cards:
               type: numeric
               tooltip: Daily number of lateral flow tests reported up to {date}
 
-        - heading: Cumulative data
+        - heading: Total data table
           tabType: table
           fields:
             - label: Date
@@ -749,13 +749,13 @@ cards:
               window: 7
               clipEnd: 11 #no of days to exclude for incomplete data
 
-      - heading: Cumulative
+      - heading: Total
         tabType: chart
         barType: normal
         fields:
           - label: Lab-based virus tests conducted
             value: cumPCRTestsBySpecimenDate
-            tooltip: Cumulative number of lab-based virus tests conducted
+            tooltip: Total number of lab-based virus tests conducted
             type: bar
             colour: 0
             rollingAverage: false
@@ -765,7 +765,7 @@ cards:
                 colour: 6
                 label: "Most recent days (incomplete)"
 
-      - heading: Data
+      - heading: Data table
         tabType: table
         fields:
           - label: Date
@@ -835,18 +835,18 @@ cards:
             fill: false
             rollingAverage: true
 
-      - heading: Cumulative
+      - heading: Total
         tabType: chart
         barType: normal
         fields:
           - label: Rapid lateral flow tests reported
             value: cumLFDTestsBySpecimenDate
-            tooltip: Cumulative number of rapid lateral flow tests reported
+            tooltip: Total number of rapid lateral flow tests reported
             type: bar
             colour: 0
             rollingAverage: false
 
-      - heading: Data
+      - heading: Data table
         tabType: table
         fields:
           - label: Date
@@ -926,39 +926,39 @@ cards:
             colour: 1
             rollingAverage: false
 
-      - heading: Cumulative
+      - heading: Total
         tabType: chart
         barType: stack
         fields:
           - label: Pillar 1 (NHS and, in England, UKHSA)
             value: cumPillarOneTestsByPublishDate
-            tooltip: Cumulative total number of lab-based COVID-19 tests conducted by NHS (and, in England, UKHSA) laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 tests conducted by NHS (and, in England, UKHSA) laboratories up to {date}
             type: bar
             colour: 0
             rollingAverage: false
 
           - label: Pillar 2 (UK Government testing programme)
             value: cumPillarTwoTestsByPublishDate
-            tooltip: Cumulative total number of COVID-19 tests reported by the UK Government testing programme up to {date}
+            tooltip: Total number of COVID-19 tests reported by the UK Government testing programme up to {date}
             type: bar
             colour: 3
             rollingAverage: false
 
           - label: Pillar 3 (Antibody)
             value: cumPillarThreeTestsByPublishDate
-            tooltip: Cumulative total number of lab-based COVID-19 antibody tests conducted by laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 antibody tests conducted by laboratories up to {date}
             type: bar
             colour: 4
             rollingAverage: false
 
           - label: Pillar 4 (Surveillance)
             value: cumPillarFourTestsByPublishDate
-            tooltip: Cumulative total number of lab-based COVID-19 surveillance tests conducted by laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 surveillance tests conducted by laboratories up to {date}
             type: bar
             colour: 1
             rollingAverage: false
 
-      - heading: Daily data
+      - heading: Daily data table
         tabType: table
         fields:
           - label: Date reported
@@ -991,7 +991,7 @@ cards:
             type: numeric
             tooltip: Daily number of lab-based COVID-19 tests conducted by laboratories on {date}
 
-      - heading: Cumulative data
+      - heading: Total data table
         tabType: table
         fields:
           - label: Date reported
@@ -1002,27 +1002,27 @@ cards:
           - label: Pillar 1
             value: cumPillarOneTestsByPublishDate
             type: numeric
-            tooltip: Cumulative total number of lab-based COVID-19 tests conducted by NHS (and, in England, UKHSA) laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 tests conducted by NHS (and, in England, UKHSA) laboratories up to {date}
 
           - label: Pillar 2
             value: cumPillarTwoTestsByPublishDate
             type: numeric
-            tooltip: Cumulative total number of COVID-19 tests reported by the UK Government testing programme up to {date}
+            tooltip: Total number of COVID-19 tests reported by the UK Government testing programme up to {date}
 
           - label: Pillar 3
             value: cumPillarThreeTestsByPublishDate
             type: numeric
-            tooltip: Cumulative total number of lab-based COVID-19 antibody tests conducted by laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 antibody tests conducted by laboratories up to {date}
 
           - label: Pillar 4
             value: cumPillarFourTestsByPublishDate
             type: numeric
-            tooltip: Cumulative total number of lab-based COVID-19 surveillance tests conducted by laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 surveillance tests conducted by laboratories up to {date}
 
           - label: All pillars
             value: cumTestsByPublishDate
             type: numeric
-            tooltip: Cumulative total number of lab-based COVID-19 tests conducted by laboratories up to {date}
+            tooltip: Total number of lab-based COVID-19 tests conducted by laboratories up to {date}
 
       - heading: About 
         tabType: metadata
