--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2862,3 +2862,54 @@ cards:
         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
 #############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+
+  - heading: Spring booster vaccination uptake, by vaccination date age demographics [DEV]
+    cardType: chart
+    experimental: false
+    
+    fullWidth: true
+    abstract: >
+      Total percentage of people who have received a spring booster COVID-19 vaccination, by age group.
+      The denominator is the number of people aged 75 and over on the National Immunisation Management
+      Service (NIMS) database. 
+ 
+    download:
+      - vaccinationsAgeDemographics
+
+    tabs:
+      - heading: Heatmap
+        tabType: percentageHeatmap
+        fields:
+          - label: Age demographics
+            value: vaccinationsAgeDemographics
+            amplitude: cumVaccinationSpring22UptakeByVaccinationDatePercentage
+            amplitudeLabel: Percentage uptake
+            metricLabel: Age group
+            parameter: age
+                  
+            metrics:
+            #Both Eng and Scot
+            - label: 75 to 79
+              value: "75_79"
+
+            #Eng only
+            - label: 80 to 84
+              value: "80_84"
+
+            #Eng only
+            - label: 85 to 89
+              value: "85_89"
+
+            #Eng only
+            - label: 90+
+              value: "90+"
+
+      - heading: About
+        tabType: metadata
+        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+            
+##############################################################################################################################
+
+# {{ EndDevOnlyBlock }}
