--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1,24 +1,15 @@
 basevaccinationsAgeDemographics: &basevaccinationsAgeDemographics
-  value: cumPeopleVaccinatedSpring22ByVaccinationDate
+  value: vaccinationsAgeDemographics
   isArray: true
 
 
-vaccinationsAgeDemographics75+: &cumPeopleVaccinatedSpring22ByVaccinationDate75Plus
+vaccinationsAgeDemographics75+: &vaccinationsAgeDemographics75Plus
   << : *basevaccinationsAgeDemographics
   filters:
     parameter: age
     value: 75+
 
-basetwovaccinationsAgeDemographics: &basetwovaccinationsAgeDemographics
-  value: newPeopleVaccinatedSpring22ByVaccinationDate
-  isArray: true
 
-
-vaccinationsAgeDemographics75+: &newPeopleVaccinatedSpring22ByVaccinationDate75Plus
-  << : *basetwovaccinationsAgeDemographics
-  filters:
-    parameter: age
-    value: 75+
 
 headlineNumbers:
   - caption: People vaccinated
@@ -38,7 +29,8 @@ headlineNumbers:
 # {{ StartDevOnlyBlock }}
 
       - label: Spring booster total
-        << : *cumPeopleVaccinatedSpring22ByVaccinationDate75Plus
+        << : *vaccinationsAgeDemographics75Plus
+        metric: cumPeopleVaccinatedSpring22ByVaccinationDate
         tooltip: Total number of people who have received a spring booster dose of COVID-19 vaccine, reported up to {date}
 
 # {{ EndDevOnlyBlock }}
@@ -2944,11 +2936,12 @@ cards:
         tabType: chart
         fields:
           - label: Number of vaccinations
-            << : *newPeopleVaccinatedSpring22ByVaccinationDate75Plus
+            << : *vaccinationsAgeDemographics75Plus
             tooltip: Daily number of people who received a spring booster of COVID-19 vaccine
             type: bar
             colour: 0
             rollingAverage: false
+            metric: newPeopleVaccinatedSpring22ByVaccinationDate
               highlight:
                 from: -2
                 to: 0
@@ -2959,39 +2952,40 @@ cards:
         tabType: chart
         fields:
           - label: Number of vaccinations
-            << : *cumPeopleVaccinatedSpring22ByVaccinationDate75Plus
+            << : *vaccinationsAgeDemographics75Plus
             tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
             type: bar
             colour: 0
             rollingAverage: false
+            metric: cumPeopleVaccinatedSpring22ByVaccinationDate
               highlight:
                 from: -2
                 to: 0
                 colour: 6
                 label: "Most recent 2 days (incomplete)"
         
-      - heading: Data table
-        tabType: nestedTable
-        fields:
-          - label: Date
-            value: date
-            type: date
+     # - heading: Data table
+     #   tabType: nestedTable
+     #   fields:
+     #     - label: Date
+     #       value: date
+     #       type: date
 
-          - label: "Daily vaccinations: 75+"
-            metric: vaccinations
-            value: newPeopleVaccinatedSpring22ByVaccinationDate
-            type: numeric
-            filters:
-              parameter: age
-              value: 75+
+     #     - label: "Daily vaccinations: 75+"
+     #       metric: vaccinations
+     #       value: newPeopleVaccinatedSpring22ByVaccinationDate
+     #       type: numeric
+     #       filters:
+     #         parameter: age
+     #         value: 75+
 
-          - label: "Total vaccinations: 75+"
-            metric: vaccinations
-            value: cumPeopleVaccinatedSpring22ByVaccinationDate
-            type: numeric
-            filters:
-              parameter: age
-              value: 75+
+     #     - label: "Total vaccinations: 75+"
+     #       metric: vaccinations
+     #       value: cumPeopleVaccinatedSpring22ByVaccinationDate
+     #       type: numeric
+     #       filters:
+     #         parameter: age
+     #         value: 75+
        
       - heading: About
         tabType: metadata
