--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -28,10 +28,10 @@ headlineNumbers:
 
 # {{ StartDevOnlyBlock }}
 
-      - label: Spring booster total
-        << : *vaccinationsAgeDemographics75Plus
-        metric: cumPeopleVaccinatedSpring22ByVaccinationDate
-        tooltip: Total number of people who have received a spring booster dose of COVID-19 vaccine, reported up to {date}
+#      - label: Spring booster total
+#        << : *vaccinationsAgeDemographics75Plus
+#        metric: cumPeopleVaccinatedSpring22ByVaccinationDate
+#        tooltip: Total number of people who have received a spring booster dose of COVID-19 vaccine, reported up to {date}
 
 # {{ EndDevOnlyBlock }}
 
@@ -41,10 +41,7 @@ headlineNumbers:
         value: cumVaccinesGivenByPublishDate
         tooltip: Total number of COVID-19 vaccines given, reported up to {date}
 
-
-
-
-    
+ 
 
 ##############################################################################################################################
 
@@ -2915,54 +2912,54 @@ cards:
             
 ##############################################################################################################################
 
-  - heading: People aged 75 and over who have received spring booster vaccinations, by vaccination date [DEV]
-    cardType: chart
-    locationAware:
-      excluded:
-        areaType:
-          - overview
+  #- heading: People aged 75 and over who have received spring booster vaccinations, by vaccination date [DEV]
+  #  cardType: chart
+  #  locationAware:
+  #    excluded:
+  #      areaType:
+  #        - overview
 
-    fullWidth: true
-    abstract: >
-      The number of people aged 75 and over who have received a spring booster COVID-19 vaccination. Data for the latest 2 days, marked in grey, are incomplete. 
-      Data are shown by date of vaccination.
+  #  fullWidth: true
+  #  abstract: >
+  #    The number of people aged 75 and over who have received a spring booster COVID-19 vaccination. Data for the latest 2 days, marked in grey, are incomplete. 
+  #    Data are shown by date of vaccination.
 
-    download:
-      - vaccinationsAgeDemographics
+  #  download:
+  #    - vaccinationsAgeDemographics
       
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        fields:
-          - label: Number of vaccinations
-            << : *vaccinationsAgeDemographics75Plus
-            tooltip: Daily number of people who received a spring booster of COVID-19 vaccine
-            type: bar
-            colour: 0
-            rollingAverage: false
-            metric: newPeopleVaccinatedSpring22ByVaccinationDate
-              highlight:
-                from: -2
-                to: 0
-                colour: 6
-                label: "Most recent 2 days (incomplete)"
+  #  tabs:
+  #    - heading: Daily
+  #      tabType: chart
+  #      fields:
+  #        - label: Number of vaccinations
+  #          << : *vaccinationsAgeDemographics75Plus
+  #          tooltip: Daily number of people who received a spring booster of COVID-19 vaccine
+  #          type: bar
+  #          colour: 0
+  #          rollingAverage: false
+  #          metric: newPeopleVaccinatedSpring22ByVaccinationDate
+  #            highlight:
+  #              from: -2
+  #              to: 0
+  #              colour: 6
+  #              label: "Most recent 2 days (incomplete)"
 
-      - heading: Total
-        tabType: chart
-        fields:
-          - label: Number of vaccinations
-            << : *vaccinationsAgeDemographics75Plus
-            tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
-            type: bar
-            colour: 0
-            rollingAverage: false
-            metric: cumPeopleVaccinatedSpring22ByVaccinationDate
-              highlight:
-                from: -2
-                to: 0
-                colour: 6
-                label: "Most recent 2 days (incomplete)"
+  #    - heading: Total
+  #      tabType: chart
+  #      fields:
+  #        - label: Number of vaccinations
+  #          << : *vaccinationsAgeDemographics75Plus
+  #          tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
+  #          type: bar
+  #          colour: 0
+  #          rollingAverage: false
+  #          metric: cumPeopleVaccinatedSpring22ByVaccinationDate
+  #            highlight:
+  #              from: -2
+  #              to: 0
+  #              colour: 6
+  #              label: "Most recent 2 days (incomplete)"
         
      # - heading: Data table
      #   tabType: nestedTable
@@ -2987,9 +2984,9 @@ cards:
      #         parameter: age
      #         value: 75+
        
-      - heading: About
-        tabType: metadata
-        filename: cardMetadata/deaths/cardDeathsAndRatesByAgeUnderOver60.md
+    #  - heading: About
+    #    tabType: metadata
+    #    filename: cardMetadata/deaths/cardDeathsAndRatesByAgeUnderOver60.md
 
 ##############################################################################################################################
 
