--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1,10 +1,10 @@
-basevaccinationsAgeDemographics: &basevaccinationsAgeDemographics
+baseVaccinationAgeDemographics: &baseVaccinationAgeDemographics
   value: vaccinationsAgeDemographics
   isArray: true
 
 
-vaccinationsAgeDemographics75+: &vaccinationsAgeDemographics75Plus
-  << : *basevaccinationsAgeDemographics
+vaccinationAgeDemographics75+: &vaccinationAgeDemographics75Plus
+  << : *baseVaccinationAgeDemographics
   filters:
     parameter: age
     value: 75+
@@ -29,7 +29,7 @@ headlineNumbers:
 # {{ StartDevOnlyBlock }}
 
 #      - label: Spring booster total
-#        << : *vaccinationsAgeDemographics75Plus
+#        << : *vaccinationAgeDemographics75Plus
 #        metric: cumPeopleVaccinatedSpring22ByVaccinationDate
 #        tooltip: Total number of people who have received a spring booster dose of COVID-19 vaccine, reported up to {date}
 
@@ -2912,81 +2912,57 @@ cards:
             
 ##############################################################################################################################
 
-  #- heading: People aged 75 and over who have received spring booster vaccinations, by vaccination date [DEV]
-  #  cardType: chart
-  #  locationAware:
-  #    excluded:
-  #      areaType:
-  #        - overview
+  - heading: People aged 75 and over who have received spring booster vaccinations, by vaccination date [DEV]
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
 
-  #  fullWidth: true
-  #  abstract: >
-  #    The number of people aged 75 and over who have received a spring booster COVID-19 vaccination. Data for the latest 2 days, marked in grey, are incomplete. 
-  #    Data are shown by date of vaccination.
+    fullWidth: true
+    abstract: >
+      The number of people aged 75 and over who have received a spring booster COVID-19 vaccination. Data for the latest 2 days, marked in grey, are incomplete. 
+      Data are shown by date of vaccination.
 
-  #  download:
-  #    - vaccinationsAgeDemographics
-      
+    download:
+      - vaccinationsAgeDemographics
 
-  #  tabs:
-  #    - heading: Daily
-  #      tabType: chart
-  #      fields:
-  #        - label: Number of vaccinations
-  #          << : *vaccinationsAgeDemographics75Plus
-  #          tooltip: Daily number of people who received a spring booster of COVID-19 vaccine
-  #          type: bar
-  #          colour: 0
-  #          rollingAverage: false
-  #          metric: newPeopleVaccinatedSpring22ByVaccinationDate
-  #            highlight:
-  #              from: -2
-  #              to: 0
-  #              colour: 6
-  #              label: "Most recent 2 days (incomplete)"
+    tabs:
+      - heading: Daily
+        tabType: chart
+        fields:
+          - label: Number of vaccinations
+            << : *vaccinationAgeDemographics75Plus
+            tooltip: Daily number of people who received a spring booster of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+            metric: newPeopleVaccinatedThirdInjectionByVaccinationDate
+              highlight:
+                from: -2
+                to: 0
+                colour: 6
+                label: "Most recent 2 days (incomplete)"
 
-  #    - heading: Total
-  #      tabType: chart
-  #      fields:
-  #        - label: Number of vaccinations
-  #          << : *vaccinationsAgeDemographics75Plus
-  #          tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
-  #          type: bar
-  #          colour: 0
-  #          rollingAverage: false
-  #          metric: cumPeopleVaccinatedSpring22ByVaccinationDate
-  #            highlight:
-  #              from: -2
-  #              to: 0
-  #              colour: 6
-  #              label: "Most recent 2 days (incomplete)"
-        
-     # - heading: Data table
-     #   tabType: nestedTable
-     #   fields:
-     #     - label: Date
-     #       value: date
-     #       type: date
+      - heading: Total
+        tabType: chart
+        fields:
+          - label: Number of vaccinations
+            << : *vaccinationAgeDemographics75Plus
+            tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+            metric: cumPeopleVaccinatedThirdInjectionByVaccinationDate
+              highlight:
+                from: -2
+                to: 0
+                colour: 6
+                label: "Most recent 2 days (incomplete)"
 
-     #     - label: "Daily vaccinations: 75+"
-     #       metric: newPeopleVaccinatedSpring22ByVaccinationDate
-     #       value: vaccinationsAgeDemographics
-     #       type: numeric
-     #       filters:
-     #         parameter: age
-     #         value: 75+
-
-     #     - label: "Total vaccinations: 75+"
-     #       metric: cumPeopleVaccinatedSpring22ByVaccinationDate
-     #       value: vaccinationsAgeDemographics
-     #       type: numeric
-     #       filters:
-     #         parameter: age
-     #         value: 75+
-       
-    #  - heading: About
-    #    tabType: metadata
-    #    filename: cardMetadata/deaths/cardDeathsAndRatesByAgeUnderOver60.md
+      - heading: About
+        tabType: metadata
+        filename: cardMetadata/deaths/cardDeathsAndRatesByAgeUnderOver60.md
 
 ##############################################################################################################################
 
